# campero

./: .gitlab-ci.yml  campero.repos  campero.repos.public  campero_public.repos
campero/: CMakeLists.txt  package.xml
campero_bridge/: CMakeLists.txt  package.xml
campero_bridge/docker/: Dockerfile  compose.yaml  entrypoint.sh
campero_bridge/scripts/: campero_bridge
campero_bridge/src/: campero_bridge.cpp  campero_bridge.hpp  campero_bridge_node.cpp
campero_bringup/: CMakeLists.txt  package.xml
campero_bringup/config/: controller_manager.yaml  mobile_base_controller.yaml
campero_bringup/launch/: campero.launch.py  campero_base.launch.py  campero_mecanum.launch.py  campero_rubber.launch.py  campero_teleop.launch.py  campero_test.launch.py
campero_bringup/python/: campero_bringup.py
campero_bringup/scripts/: urdf_description.py
campero_bringup/test/: test_urdf_description.py
campero_description/: CMakeLists.txt  package.xml
campero_description/config/: campero_mecanum.yaml  campero_rubber.yaml  teleop_mecanum.yaml  teleop_rubber.yaml
campero_description/launch/: view_campero.launch.py  view_campero.launch.xml
campero_description/meshes/: mecanum_wheel.stl
campero_description/python/: campero_description.py
campero_description/ros2_control/: campero.ros2_control.xacro  campero_mecanum.ros2_control.urdf.xacro  campero_rubber.ros2_control.urdf.xacro
campero_description/test/: test_campero_description.py
campero_description/urdf/: campero.xacro  campero_laser_support.urdf.xacro  campero_mecanum.urdf.xacro  campero_rubber.urdf.xacro
campero_description/urdf/ros2_control/: campero_mecanum.ros2_control.urdf.xacro
campero_description/urdf/visual/: chassis.xacro
campero_hardware/: CMakeLists.txt  campero_hardware.xml  package.xml
campero_hardware/include/campero_hardware/: campero_hardware4WD.hpp  campero_hardware4WMD.hpp  campero_hardware_base.hpp
campero_hardware/src/: campero_hardware4WD.cpp  campero_hardware4WMD.cpp  campero_hardware_base.cpp
